# WBSeo

./: .env_template  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  json_example  manage.py  pyproject.toml
WBSeo/: asgi.py  settings.py  urls.py  wsgi.py
description/: models.py  serializers.py  urls.py  views.py
description/migrations/: 0001_initial.py
description/tests/: ai_integrationtests.py  ai_unittests.py  test_integration_wb.py
description/utils/: ai_utils.py  bd_utils.py  cache_utils.py  common_utils.py  wb_utils.py
